# HJ212Receiver

./: README.md  环保 HJ212协议解析.md
HJ212-2017协议文档/: 环保 HJ212协议解析.md
sources/: boost.props  sdk.props  yaml.props
sources/GB212Service/: CMakeLists.txt  ConfigY.h  ConfigYNode.h  ConfigYWriter.h  Connection.cpp  Connection.h  ConnectionManager.h  DataMiddleware.cpp  DataMiddleware.h  GB212.h  GB212DataMiddleware.cpp  GB212DataMiddleware.h  GB212Service.sln  GB212Service.vcxproj  GB212Service.vcxproj.filters  MainApp.cpp  MainApp.h  MainService.cpp  MainService.h  TcpServer.h  cnfY.h  cnfYDefine.h  cnfYNode.h  main.cpp  net.h  params.xml  pub.h
sources/include/: DataFormatDefine.h  DataQueue.h  Locker.h  Macro.h  ModbusDefine.h  func.h  json.h  my_log.h  my_signal.h  type.h  type_def.h  type_define.h
sources/lib/Debug/: WinApplication.lib
sources/lib/Release/: WinApplication.lib  libyaml-cpp.lib
